get-job API
