# service/src/main/java/org/databiosphere/workspacedataservice/generated/JobServerModel.java
@@ -1,0 +1,269 @@
+package org.databiosphere.workspacedataservice.generated;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import javax.annotation.Generated;
+
+/**
+ * JobServerModel
+ */
+
+@JsonTypeName("Job")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-10-11T10:58:05.173956-04:00[America/New_York]")
+public class JobServerModel {
+
+  private String jobId;
+
+  private String jobType;
+
+  /**
+   * Gets or Sets status
+   */
+  public enum StatusEnum {
+    QUEUED("QUEUED"),
+    
+    RUNNING("RUNNING"),
+    
+    SUCCEEDED("SUCCEEDED"),
+    
+    ERROR("ERROR"),
+    
+    CANCELLED("CANCELLED"),
+    
+    UNKNOWN("UNKNOWN");
+
+    private String value;
+
+    StatusEnum(String value) {
+      this.value = value;
+    }
+
+    @JsonValue
+    public String getValue() {
+      return value;
+    }
+
+    @Override
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    @JsonCreator
+    public static StatusEnum fromValue(String value) {
+      for (StatusEnum b : StatusEnum.values()) {
+        if (b.value.equals(value)) {
+          return b;
+        }
+      }
+      throw new IllegalArgumentException("Unexpected value '" + value + "'");
+    }
+  }
+
+  private StatusEnum status;
+
+  private String created;
+
+  private String updated;
+
+  private String errorMessage;
+
+  /**
+   * Default constructor
+   * @deprecated Use {@link JobServerModel#JobServerModel(String, String, StatusEnum, String, String)}
+   */
+  @Deprecated
+  public JobServerModel() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public JobServerModel(String jobId, String jobType, StatusEnum status, String created, String updated) {
+    this.jobId = jobId;
+    this.jobType = jobType;
+    this.status = status;
+    this.created = created;
+    this.updated = updated;
+  }
+
+  public JobServerModel jobId(String jobId) {
+    this.jobId = jobId;
+    return this;
+  }
+
+  /**
+   * Get jobId
+   * @return jobId
+  */
+  @NotNull 
+  @Schema(name = "jobId", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("jobId")
+  public String getJobId() {
+    return jobId;
+  }
+
+  public void setJobId(String jobId) {
+    this.jobId = jobId;
+  }
+
+  public JobServerModel jobType(String jobType) {
+    this.jobType = jobType;
+    return this;
+  }
+
+  /**
+   * Get jobType
+   * @return jobType
+  */
+  @NotNull 
+  @Schema(name = "jobType", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("jobType")
+  public String getJobType() {
+    return jobType;
+  }
+
+  public void setJobType(String jobType) {
+    this.jobType = jobType;
+  }
+
+  public JobServerModel status(StatusEnum status) {
+    this.status = status;
+    return this;
+  }
+
+  /**
+   * Get status
+   * @return status
+  */
+  @NotNull 
+  @Schema(name = "status", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("status")
+  public StatusEnum getStatus() {
+    return status;
+  }
+
+  public void setStatus(StatusEnum status) {
+    this.status = status;
+  }
+
+  public JobServerModel created(String created) {
+    this.created = created;
+    return this;
+  }
+
+  /**
+   * Get created
+   * @return created
+  */
+  @NotNull 
+  @Schema(name = "created", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("created")
+  public String getCreated() {
+    return created;
+  }
+
+  public void setCreated(String created) {
+    this.created = created;
+  }
+
+  public JobServerModel updated(String updated) {
+    this.updated = updated;
+    return this;
+  }
+
+  /**
+   * Get updated
+   * @return updated
+  */
+  @NotNull 
+  @Schema(name = "updated", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("updated")
+  public String getUpdated() {
+    return updated;
+  }
+
+  public void setUpdated(String updated) {
+    this.updated = updated;
+  }
+
+  public JobServerModel errorMessage(String errorMessage) {
+    this.errorMessage = errorMessage;
+    return this;
+  }
+
+  /**
+   * Get errorMessage
+   * @return errorMessage
+  */
+  
+  @Schema(name = "errorMessage", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("errorMessage")
+  public String getErrorMessage() {
+    return errorMessage;
+  }
+
+  public void setErrorMessage(String errorMessage) {
+    this.errorMessage = errorMessage;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    JobServerModel job = (JobServerModel) o;
+    return Objects.equals(this.jobId, job.jobId) &&
+        Objects.equals(this.jobType, job.jobType) &&
+        Objects.equals(this.status, job.status) &&
+        Objects.equals(this.created, job.created) &&
+        Objects.equals(this.updated, job.updated) &&
+        Objects.equals(this.errorMessage, job.errorMessage);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(jobId, jobType, status, created, updated, errorMessage);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class JobServerModel {\n");
+    sb.append("    jobId: ").append(toIndentedString(jobId)).append("\n");
+    sb.append("    jobType: ").append(toIndentedString(jobType)).append("\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("    created: ").append(toIndentedString(created)).append("\n");
+    sb.append("    updated: ").append(toIndentedString(updated)).append("\n");
+    sb.append("    errorMessage: ").append(toIndentedString(errorMessage)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
