# service/src/main/resources/static/swagger/apis-v1.yaml
@@ -15,6 +15,8 @@ tags:
   # Tags should be listed in the order they should appear in the UI
   - name: Import
     description: Import APIs
+  - name: Job
+    description: Job APIs
 
 paths:
   ##############################
@@ -57,6 +59,37 @@ paths:
         202:
           description: Import accepted.
 
+  ##############################
+  # Job APIs
+  ##############################
+  /{instanceUuid}/job/v1/{jobId}:
+    get:
+      summary: Get status of a long-running job.
+      operationId: jobStatusV1
+      tags:
+        - Job
+      parameters:
+        - $ref: '#/components/parameters/instanceUuidPathParam'
+        - name: jobId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Job completed.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericJob'
+        202:
+          description: Job still running.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericJob'
+
 components:
   # within each group, components should be listed alphabetically.
   securitySchemes:
@@ -77,3 +110,41 @@ components:
         type: string
         format: uuid
 
+  schemas:
+    GenericJob:
+      x-all-of-name: GenericJob
+      description: |
+        Generic representation of a job, no opinion on inputs and result for the job.
+        See individual APIs for more guidance on expected input and result payloads.
+      allOf:
+        - $ref: '#/components/schemas/Job'
+        - type: object
+          properties:
+            input:
+              type: object
+              description: Input arguments for this job
+            result:
+              type: object
+              description: Result of this job
+    Job:
+      type: object
+      required:
+        - jobId
+        - jobType
+        - status
+        - created
+        - updated
+      properties:
+        jobId:
+          type: string
+        jobType:
+          type: string
+        status:
+          type: string
+          enum: [ QUEUED, RUNNING, SUCCEEDED, ERROR, CANCELLED, UNKNOWN ]
+        created:
+          type: string
+        updated:
+          type: string
+        errorMessage:
+          type: string
